Project configuration fixed
Some errors appeared due to an apparent misconfiguration that was
slid into the project.

--- a/.project
+++ b/.project
@@ -36,7 +36,7 @@
 	</natures>
 	<linkedResources>
 		<link>
-			<name>acme-framework</name>
+			<name>classes</name>
 			<type>2</type>
 			<locationURI>WORKSPACE_LOC/Frameworks/Acme-Framework-22.1/target/classes</locationURI>
 		</link>
