--- a/.project
+++ b/.project
@@ -36,6 +36,11 @@
 	</natures>
 	<linkedResources>
 		<link>
+			<name>acme-framework</name>
+			<type>2</type>
+			<locationURI>WORKSPACE_LOC/Frameworks/Acme-Framework-22.3/target/classes</locationURI>
+		</link>
+		<link>
 			<name>classes</name>
 			<type>2</type>
 			<locationURI>WORKSPACE_LOC/Frameworks/Acme-Framework-22.1/target/classes</locationURI>
