Task-91: Implemented Spam Detector validation
When the body of a chirp contains an amount of spam terms, the chirp
won't be stored.

--- a/.project
+++ b/.project
@@ -45,5 +45,10 @@
 			<type>2</type>
 			<locationURI>WORKSPACE_LOC/Frameworks/Acme-Framework-22.1/target/classes</locationURI>
 		</link>
+		<link>
+			<name>spam-detector</name>
+			<type>2</type>
+			<locationURI>WORKSPACE_LOC/spam-detector/target/classes</locationURI>
+		</link>
 	</linkedResources>
 </projectDescription>
