Task-091: fixed how the spam-detector is included
Now, it's just the external .jar file added to the project.

--- a/.classpath
+++ b/.classpath
@@ -29,7 +29,6 @@
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="src" path="spam-detector"/>
 	<classpathentry excluding="**/fragments/**" kind="src" path="acme-framework"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8">
 		<attributes>
@@ -47,6 +46,10 @@
 			<attribute name="org.eclipse.jst.component.dependency" value="/WEB-INF/lib"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry combineaccessrules="false" kind="src" path="/spam-detector"/>
+	<classpathentry kind="lib" path="C:/Users/gonza/Documents/ESTUDIOS/UNIVERSIDAD/3 II SOFTWARE/DP2/Workspace/Workspace-22.0/spam-detector/target/spam-detector-0.0.1.jar">
+		<attributes>
+			<attribute name="org.eclipse.jst.component.dependency" value="/WEB-INF/lib"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
