--- a/.classpath
+++ b/.classpath
@@ -46,5 +46,6 @@
 			<attribute name="org.eclipse.jst.component.dependency" value="/WEB-INF/lib"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="lib" path="src/main/resources/spam-detector-0.0.1.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
