--- a/.project
+++ b/.project
@@ -41,6 +41,11 @@
 			<locationURI>WORKSPACE_LOC/Frameworks/Acme-Framework-22.5/target/classes</locationURI>
 		</link>
 		<link>
+			<name>acme-toolkits</name>
+			<type>2</type>
+			<locationURI>WORKSPACE_LOC/Frameworks/Acme-Framework-22.5.2/target/classes</locationURI>
+		</link>
+		<link>
 			<name>classes</name>
 			<type>2</type>
 			<locationURI>WORKSPACE_LOC/Frameworks/Acme-Framework-22.1/target/classes</locationURI>
