--- a/.project
+++ b/.project
@@ -38,14 +38,12 @@
 		<link>
 			<name>acme-framework</name>
 			<type>2</type>
-
 			<location>C:/Users/conde/OneDrive/Documents/UNIVERSIDAD/Workspace-22.0/Frameworks/Acme-Framework-22.5.2/target/classes</location>
 		</link>
 		<link>
 			<name>acme-toolkits</name>
 			<type>2</type>
-
-			<locationURI>WORKSPACE_LOC/Frameworks/Acme-Framework-22.5.2/target/classes</locationURI>
+			<location>C:/Users/jaime/Desktop/Universidad/3ºAÑO/DP2/Workspace-22.0/Frameworks/Acme-Framework-22.7/target/classes</location>
 		</link>
 		<link>
 			<name>classes</name>
