--- a/.project
+++ b/.project
@@ -38,7 +38,7 @@
 		<link>
 			<name>acme-framework</name>
 			<type>2</type>
-			<location>C:/Users/conde/OneDrive/Documents/UNIVERSIDAD/Workspace-22.0/Frameworks/Acme-Framework-22.5.2/target/classes</location>
+			<locationURI>WORKSPACE_LOC/Frameworks/Acme-Framework-22.6/target/classes</locationURI>
 		</link>
 		<link>
 			<name>acme-toolkits</name>
